; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/extr_gtp.c_ip4_route_output_gtp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/extr_gtp.c_ip4_route_output_gtp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtable = type { i32 }
%struct.flowi4 = type { i32, i32, i32, i32, i32 }
%struct.sock = type { i32, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.rtable* (%struct.flowi4*, %struct.sock*, i32)* @ip4_route_output_gtp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.rtable* @ip4_route_output_gtp(%struct.flowi4* %0, %struct.sock* %1, i32 %2) #0 {
  %4 = alloca %struct.flowi4*, align 8
  %5 = alloca %struct.sock*, align 8
  %6 = alloca i32, align 4
  store %struct.flowi4* %0, %struct.flowi4** %4, align 8
  store %struct.sock* %1, %struct.sock** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.flowi4*, %struct.flowi4** %4, align 8
  %8 = call i32 @memset(%struct.flowi4* %7, i32 0, i32 20)
  %9 = load %struct.sock*, %struct.sock** %5, align 8
  %10 = getelementptr inbounds %struct.sock, %struct.sock* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.flowi4*, %struct.flowi4** %4, align 8
  %13 = getelementptr inbounds %struct.flowi4, %struct.flowi4* %12, i32 0, i32 4
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.flowi4*, %struct.flowi4** %4, align 8
  %16 = getelementptr inbounds %struct.flowi4, %struct.flowi4* %15, i32 0, i32 3
  store i32 %14, i32* %16, align 4
  %17 = load %struct.sock*, %struct.sock** %5, align 8
  %18 = call %struct.TYPE_2__* @inet_sk(%struct.sock* %17)
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.flowi4*, %struct.flowi4** %4, align 8
  %22 = getelementptr inbounds %struct.flowi4, %struct.flowi4* %21, i32 0, i32 2
  store i32 %20, i32* %22, align 4
  %23 = load %struct.sock*, %struct.sock** %5, align 8
  %24 = call i32 @RT_CONN_FLAGS(%struct.sock* %23)
  %25 = load %struct.flowi4*, %struct.flowi4** %4, align 8
  %26 = getelementptr inbounds %struct.flowi4, %struct.flowi4* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 4
  %27 = load %struct.sock*, %struct.sock** %5, align 8
  %28 = getelementptr inbounds %struct.sock, %struct.sock* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.flowi4*, %struct.flowi4** %4, align 8
  %31 = getelementptr inbounds %struct.flowi4, %struct.flowi4* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  %32 = load %struct.sock*, %struct.sock** %5, align 8
  %33 = call i32 @sock_net(%struct.sock* %32)
  %34 = load %struct.flowi4*, %struct.flowi4** %4, align 8
  %35 = call %struct.rtable* @ip_route_output_key(i32 %33, %struct.flowi4* %34)
  ret %struct.rtable* %35
}

declare dso_local i32 @memset(%struct.flowi4*, i32, i32) #1

declare dso_local %struct.TYPE_2__* @inet_sk(%struct.sock*) #1

declare dso_local i32 @RT_CONN_FLAGS(%struct.sock*) #1

declare dso_local %struct.rtable* @ip_route_output_key(i32, %struct.flowi4*) #1

declare dso_local i32 @sock_net(%struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
